--- a/LeagueCreator/LeagueCreator.csproj
+++ b/LeagueCreator/LeagueCreator.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Players\Player.cs" />
     <Compile Include="Players\PlayerSheet.cs" />
     <Compile Include="Factories\PlayerSheetFactory.cs" />
+    <Compile Include="Players\Team.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
