Cleanup of object creation

--- a/LeagueCreator/LeagueCreator.csproj
+++ b/LeagueCreator/LeagueCreator.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Factories\PlayerFactory.cs" />
+    <Compile Include="Factories\TeamFactory.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
